--- a/BuberBreakfast/BuberBreakfast.csproj
+++ b/BuberBreakfast/BuberBreakfast.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
   </ItemGroup>
 
   <PropertyGroup>
